chore: fix tick labels alignment

--- a/projects/demo/src/modules/components/input-slider/examples/3/index.less
+++ b/projects/demo/src/modules/components/input-slider/examples/3/index.less
@@ -6,4 +6,16 @@
     color: var(--tui-text-secondary);
     align-items: center;
     margin-top: 0.25rem;
+
+    & > [tuiIconButton]:first-child {
+        justify-content: start;
+    }
+
+    & > [tuiIconButton]:last-child {
+        justify-content: end;
+    }
+
+    & > [tuiIconButton]::before {
+        margin: 0;
+    }
 }
